# Perception_team_code

./: README.md  make_yolo_dataset  traffic_light_cycle.py
Camera-LiDAR_Data_Acquisition_System/install/: local_setup.sh  setup.sh
Camera-LiDAR_Data_Acquisition_System/install/darknet_ros_msgs/share/darknet_ros_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Camera-LiDAR_Data_Acquisition_System/install/fusion/lib/fusion/: cap  double  mtest  roi  test  top  track
Camera-LiDAR_Data_Acquisition_System/install/fusion/share/fusion/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Camera-LiDAR_Data_Acquisition_System/install/lane_detection/lib/lane_detection/: birdview  camera2yolo
Camera-LiDAR_Data_Acquisition_System/install/lane_detection/share/lane_detection/: package.sh  package.xml
Camera-LiDAR_Data_Acquisition_System/log/: latest_build
Camera-LiDAR_Data_Acquisition_System/src/fusion/: package.xml  setup.py
Camera-LiDAR_Data_Acquisition_System/src/fusion/fusion/: camera_lidar_doublecap1.py  capture.py  check_pcd.py
Check_fusion_code/: fusion_check_1cam.py  fusion_check_3cam.py  fusion_check_cloudfiltered.py
Image_concat/: image_concat_trafficlight.py
Image_concat/src/crop/launch/: line_crop_launch.py
Image_concat/src/crop/src/: cropbox_bs.cpp  obstacle.cpp  xyz_crop.cpp  z_crop.cpp
Lidar_post_processing/src/crop/: CMakeLists.txt
VimbaX_2025-1/: README.txt
VimbaX_2025-1/api/dotnet/: README.md  VmbNET.1.1.0.nupkg
VimbaX_2025-1/api/examples/VmbNET/: LICENSE  README.md
VimbaX_2025-1/api/include/VmbC/: VmbC.h
VimbaX_2025-1/api/include/VmbCPP/: LoggerDefines.h
VimbaX_2025-1/api/include/VmbImageTransform/: VmbTransform.h
VimbaX_2025-1/api/python/: vmbpy-1.1.0-py3-none-linux_x86_64.whl
VimbaX_2025-1/api/source/VmbCPP/: BaseFeature.cpp  BasicLockable.cpp  Camera.cpp  Frame.cpp  FrameHandler.cpp  InternalLoggerDefines.h  Mutex.cpp  MutexGuard.cpp  Semaphore.cpp  Stream.cpp  VmbSystem.cpp
VimbaX_2025-1/cti/: VimbaGigETL.cti
VimbaX_2025-1/doc/: VimbaX_Documentation_Overview.html
usb_cam/: README.md  local_setup.sh
usb_cam/config/: params_1.yaml  params_2.yaml  params_3.yaml  params_4.yaml
usb_cam/launch/: camera.launch.py  webcam.py
yolo_seg_cpp_package/install/: local_setup.sh  setup.sh
yolo_seg_cpp_package/log/: latest_build
yolo_seg_cpp_package/src/cone_fusion/: CMakeLists.txt
yolo_seg_cpp_package/src/cone_fusion/src/: fusion_node.cpp  tf_traffic.cpp  traffic_fusion.cpp
yolo_seg_cpp_package/src/yolo/: CMakeLists.txt
yolo_seg_cpp_package/src/yolo/include/det/: YOLO8.hpp
yolo_seg_cpp_package/src/yolo/models/: put_weights_here.txt
yolo_seg_cpp_package/src/yolo/src/: camera_inference.cpp  camera_traffic_sign.cpp
yolo_seg_cpp_package/src/yolo/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
yolo_seg_cpp_package/src/yolo/src/log/: latest_build
yolo_seg_cpp_package/src/yolo_msg/: CMakeLists.txt  package.xml
yolo_seg_cpp_package/src/yolo_msg/msg/: TrafficSign.msg
yolo_seg_python_package/install/: local_setup.sh  setup.sh
yolo_seg_python_package/log/: latest_build
yolo_seg_python_package/src/yolo/: setup.py
yolo_seg_python_package/src/yolo/yolo/: traffic.py
yolo_seg_python_package/src/yolo_msg/: CMakeLists.txt
yolo_segmentation/: CMakeLists.txt  package.xml
yolo_segmentation/src/: camera_inference.cpp
(+116 files in other folders)
